--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
         <p class="p">
-            Information about the web page: This is my first website
+            Information about the web page: This is my first website.
         </p>
     </body>
 </html>
